Changed images sizes.

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,6 +1,6 @@
 <section class="section--subscribe">
   <div class="container container--content">
-    <h3 class="u-alignCenter">Stay in touch</h3>
+    <h3 class="u-alignCenter">Get in touch</h3>
     <p align="center">
       Hi, I'm <a href="{{ site.baseurl }}about/"><strong>Arnu Pretorius</strong></a>, please feel free to get in touch. 
     </p>
